--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge-no-default-policy.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge-no-default-policy.cfg
@@ -19,7 +19,7 @@ router path-selection
          name autovpn-rr3
          ipv4 address 10.7.7.7
    !
-   load-balance policy LB-CONTROL-PLANE-PROFILE
+   load-balance policy LB-DEFAULT-POLICY-CONTROL-PLANE
       path-group INET
    !
    load-balance policy LB-DEFAULT-POLICY-DEFAULT
@@ -32,8 +32,8 @@ router path-selection
    policy DEFAULT-POLICY-WITH-CP
       default-match
          load-balance LB-DEFAULT-POLICY-DEFAULT
-      10 application-profile CONTROL-PLANE-APPLICATION-PROFILE
-         load-balance LB-CONTROL-PLANE-PROFILE
+      10 application-profile APP-PROFILE-CONTROL-PLANE
+         load-balance LB-DEFAULT-POLICY-CONTROL-PLANE
    !
    vrf default
       path-selection-policy DEFAULT-POLICY-WITH-CP
@@ -100,13 +100,13 @@ interface Vxlan1
 !
 application traffic recognition
    !
-   application ipv4 CONTROL-PLANE-APPLICATION
-      destination prefix field-set CONTROL-PLANE-APP-DEST-PREFIXES
+   application ipv4 APP-CONTROL-PLANE
+      destination prefix field-set PFX-PATHFINDERS
    !
-   application-profile CONTROL-PLANE-APPLICATION-PROFILE
-      application CONTROL-PLANE-APPLICATION
+   application-profile APP-PROFILE-CONTROL-PLANE
+      application APP-CONTROL-PLANE
    !
-   field-set ipv4 prefix CONTROL-PLANE-APP-DEST-PREFIXES
+   field-set ipv4 prefix PFX-PATHFINDERS
       2.2.2.2/32
 !
 ip routing
