--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/wan_stun_dtls_profile_name.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/wan_stun_dtls_profile_name.schema.yml
@@ -14,4 +14,6 @@ keys:
     description: |-
       PREVIEW: This key is currently not supported
 
-      Name of SSL profile used for DTLS on WAN STUN connections.
+      Name of the SSL profile used for DTLS on WAN STUN connections.
+
+      When using automatic ceritficate deployment via CloudVision this name must be the same on all WAN routers.
