--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -331,6 +331,12 @@ all:
           hosts:
             new_network_services_bgp_vrf_config_true:
             new_network_services_bgp_vrf_config_false:
+        DOWNLINK_IPV4_POOL_TESTS:
+          hosts:
+            downlink-ipv4-pool-spine1:
+            downlink-ipv4-pool-spine2:
+            downlink-ipv4-pool-l3leaf1:
+            downlink-ipv4-pool-l3leaf2:
         SINGLE_LINK_TO_MLAG_PAIR:
           hosts:
             SL-LEAF0A:
