--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder1.yml
@@ -209,6 +209,16 @@ ip_security:
       time: 50
       action: clear
     mode: transport
+management_security:
+  ssl_profiles:
+  - name: profileB
+    certificate:
+      file: profileB.crt
+      key: profileB.key
+    trust_certificate:
+      certificates:
+      - aristaDeviceCertProvisionerDefaultRootCA.crt
+    tls_versions: '1.2'
 router_adaptive_virtual_topology:
   topology_role: pathfinder
   profiles:
@@ -397,6 +407,7 @@ stun:
   server:
     local_interfaces:
     - Ethernet1
+    ssl_profile: profileB
 application_traffic_recognition:
   application_profiles:
   - name: VIDEO
@@ -483,6 +494,7 @@ metadata:
         value: '888'
   cv_pathfinder:
     role: pathfinder
+    ssl_profile: profileB
     vtep_ip: 192.168.144.2
     interfaces:
     - name: Ethernet1
