Feat(eos_designs): Add 'dhcp_ip_address' under 'l3_interfaces' node settings

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/node-type-l3-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/node-type-l3-interfaces.yml
@@ -20,6 +20,7 @@ spine:
           peer: peer2
           name: Ethernet2/2
           ip_address: dhcp
+          dhcp_ip_address: 14.18.39.45/24
           dhcp_accept_default_route: true
         - # custom description
           peer: peer3
