--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -1401,8 +1401,12 @@ keys:
     - str
   isis_system_id_format:
     display_name: ISIS Default IS System-ID format
-    description: Configures source for the system-id within the ISIS net id. If `underlay_loopback`
-      is selected then all node `isis_system_id_prefix` settings will be ignored.
+    description: 'Configures source for the system-id within the ISIS net id.
+
+      By default the `id` and `isis_system_id_prefix` fields configured under the
+      node attributes are used to generate the system-id.  If `underlay_loopback`
+      is selected then all node `isis_system_id_prefix` settings will be ignored and
+      the loopback address will be used to generate the system-id.'
     documentation_options:
       table: isis-settings
     type: str
