--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/isis_system_id_format.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/isis_system_id_format.schema.yml
@@ -11,7 +11,8 @@ keys:
     display_name: ISIS Default IS System-ID format
     description: |-
       Configures source for the system-id within the ISIS net id.
-      By default the `id` and `isis_system_id_prefix` fields configured under the node attributes are used to generate the system-id.  If `underlay_loopback` is selected then all node `isis_system_id_prefix` settings will be ignored and the loopback address will be used to generate the system-id.
+      By default the `id` and `isis_system_id_prefix` fields configured under the node attributes are used to generate the system-id.
+      If `underlay_loopback` is selected then all node `isis_system_id_prefix` settings will be ignored and the loopback address will be used to generate the system-id.
     documentation_options:
       table: isis-settings
     type: str
