adding in eos_cli_config_gen

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/ptp-tests-leaf2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/ptp-tests-leaf2.cfg
@@ -61,6 +61,7 @@ interface Port-Channel1
    switchport access vlan 11
    mlag 1
    ptp enable
+   ptp mpass
    ptp announce interval 0
    ptp announce timeout 3
    ptp delay-req interval -3
