--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ptp.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ptp.cfg
@@ -37,6 +37,7 @@ interface Port-Channel5
    switchport mode trunk
    mlag 5
    ptp enable
+   ptp mpass
    ptp delay-mechanism e2e
    ptp sync-message interval 1
    ptp role dynamic
