Corrected template to resolve CI issue

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -3231,8 +3231,11 @@ keys:
         type: dict
         $ref: eos_cli_config_gen#/$defs/flow_tracking
         keys:
-          record_format_ipfix_standard_timestamps_counters:
-            type: bool
+          record:
+            type: dict
+            keys:
+              format_ipfix_standard_timestamps_counters:
+                type: bool
   flow_trackings:
     documentation_options:
       table: flow-tracking
