--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -7510,14 +7510,6 @@ $defs:
               enabled:
                 type: bool
                 default: false
-              mode:
-                type: str
-                valid_values:
-                - boundary
-                - transparent
-              mode_one_step:
-                type: bool
-                default: false
               profile:
                 type: str
                 valid_values:
@@ -7592,6 +7584,14 @@ $defs:
                   "10.1.2.3".
 
                   '
+              mode:
+                type: str
+                valid_values:
+                - boundary
+                default: boundary
+              mode_one_step:
+                type: bool
+                default: false
               ttl:
                 type: int
                 convert_types:
