--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/monitor_telemetry_postcard.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/monitor_telemetry_postcard.schema.yml
@@ -86,7 +86,7 @@ keys:
                   source_prefix:
                     type: str
                     description: IPv4 Network/Mask or IPv6 Network/Mask.
-                  protocol_type:
+                  protocol:
                     type: str
                     description: Select TCP/UDP.
                     valid_values: [ tcp, udp ]
