adding description and changing switch_port to ethernet

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/ptp-tests-leaf1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/ptp-tests-leaf1.cfg
@@ -47,12 +47,12 @@ vrf instance MGMT
 !
 vrf instance VRF1
 !
-interface Port-Channel1
+interface Port-Channel6
    description Endpoint-with-mpass
    no shutdown
    switchport
    switchport access vlan 11
-   mlag 1
+   mlag 6
    ptp enable
    ptp mpass
    ptp announce interval 0
@@ -161,6 +161,11 @@ interface Ethernet5
    ptp role master
    spanning-tree portfast
 !
+interface Ethernet6
+   description Endpoint-with-mpass_PCI1
+   no shutdown
+   channel-group 6 mode active
+!
 interface Ethernet9
    description MLAG_PEER_ptp-tests-leaf2_Ethernet9
    no shutdown
@@ -198,11 +203,6 @@ interface Ethernet14
    description PTP-TESTS-L2LEAF2-PTP-ENABLED-UPLINK-DISABLED_Ethernet1
    no shutdown
    channel-group 14 mode active
-!
-interface Port-Channel1
-   description Endpoint-with-mpass_PCI1
-   no shutdown
-   channel-group 1 mode active
 !
 interface Loopback0
    description EVPN_Overlay_Peering
