--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/ptp-tests-leaf1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/ptp-tests-leaf1.yml
@@ -237,7 +237,7 @@ port_channel_interfaces:
   mode: trunk
   vlans: '11'
   mlag: 14
-- name: Port-Channel1
+- name: Port-Channel6
   description: Endpoint-with-mpass
   type: switched
   shutdown: false
@@ -254,7 +254,7 @@ port_channel_interfaces:
     mpass: true
   mode: access
   vlans: '11'
-  mlag: 1
+  mlag: 6
 ethernet_interfaces:
 - name: Ethernet9
   peer: ptp-tests-leaf2
@@ -381,7 +381,7 @@ ethernet_interfaces:
     transport: ipv4
     enable: true
     role: master
-- name: Port-Channel1
+- name: Ethernet6
   peer: Endpoint-with-mpass
   peer_interface: PCI1
   peer_type: server
@@ -389,7 +389,7 @@ ethernet_interfaces:
   shutdown: false
   type: port-channel-member
   channel_group:
-    id: 1
+    id: 6
     mode: active
 - name: Ethernet3
   peer: Endpoint-with-specific-PTP-profile
