--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/PTP_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/PTP_TESTS.yml
@@ -89,7 +89,7 @@ servers:
   - name: Endpoint-with-mpass
     adapters:
       - endpoint_ports: [ PCI1, PCI2 ]
-        switch_ports: [ Port-Channel1, Port-Channel2 ]
+        switch_ports: [ Ethernet6, Ethernet6 ]
         switches: [ ptp-tests-leaf1, ptp-tests-leaf2 ]
         vlans: 11
         mode: access
