--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/port_channel_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/port_channel_interfaces.schema.yml
@@ -593,6 +593,10 @@ keys:
                 - layer2
             mpass:
               type: bool
+              desciption: |-
+                When MPASS is enabled on an MLAG port-channel, MLAG peers coordinate to function as a single PTP logical device.
+                Arista PTP enabled devices always place PTP messages on the same physical link within the port-channel.
+                Hence, MPASS is needed only on MLAG port-channels connected to non-Arista devices.
         ip_address:
           type: str
           description: IPv4 address/mask
