Feat(eos_cli_config_gen): Add more 'pim ipv4' interface commands (#3663)

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -2203,6 +2203,29 @@ keys:
                   max: 429467295
                 sparse_mode:
                   type: bool
+                bfd:
+                  type: bool
+                  description: Set the default for whether Bidirectional Forwarding
+                    Detection is enabled for PIM.
+                bidirectional:
+                  type: bool
+                hello:
+                  type: dict
+                  keys:
+                    count:
+                      type: str
+                      convert_types:
+                      - int
+                      - float
+                      description: Number of missed hellos after which the neighbor
+                        expires. Range <1.5-65535>.
+                    interval:
+                      type: int
+                      convert_types:
+                      - str
+                      min: 1
+                      max: 65535
+                      description: PIM hello interval in seconds.
         mac_security:
           type: dict
           keys:
@@ -7797,6 +7820,29 @@ keys:
                   max: 429467295
                 sparse_mode:
                   type: bool
+                bfd:
+                  type: bool
+                  description: Set the default for whether Bidirectional Forwarding
+                    Detection is enabled for PIM.
+                bidirectional:
+                  type: bool
+                hello:
+                  type: dict
+                  keys:
+                    count:
+                      type: str
+                      convert_types:
+                      - int
+                      - float
+                      description: Number of missed hellos after which the neighbor
+                        expires. Range <1.5-65535>.
+                    interval:
+                      type: int
+                      convert_types:
+                      - str
+                      min: 1
+                      max: 65535
+                      description: PIM hello interval in seconds.
         service_profile:
           type: str
           description: QOS profile
@@ -15183,6 +15229,29 @@ keys:
                   type: bool
                 local_interface:
                   type: str
+                bfd:
+                  type: bool
+                  description: Set the default for whether Bidirectional Forwarding
+                    Detection is enabled for PIM.
+                bidirectional:
+                  type: bool
+                hello:
+                  type: dict
+                  keys:
+                    count:
+                      type: str
+                      convert_types:
+                      - int
+                      - float
+                      description: Number of missed hellos after which the neighbor
+                        expires. Range <1.5-65535>.
+                    interval:
+                      type: int
+                      convert_types:
+                      - str
+                      min: 1
+                      max: 65535
+                      description: PIM hello interval in seconds.
         isis_enable:
           type: str
           description: ISIS instance name
