--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/structured_configs/dc1-leaf2c.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/structured_configs/dc1-leaf2c.yml
@@ -108,3 +108,6 @@ vlan_interfaces:
 metadata:
   platform: vEOS-lab
 dns_domain: dc1.local
+dps_interfaces:
+- name: Dps1
+  description: Test DPS Interface
