--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-leaf1b-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-leaf1b-catalog.yml
@@ -521,6 +521,16 @@ anta.tests.interfaces:
       description: Loopback Interface Status & Line Protocol == 'up'
 - VerifyInterfacesStatus:
     interfaces:
+    - interface: Dps1
+      protocol_status: up
+      state: up
+    result_overwrite:
+      categories:
+      - Interface State
+      custom_field: Dps1 - DPS Interface
+      description: DPS Interface Status & Line Protocol == 'up'
+- VerifyInterfacesStatus:
+    interfaces:
     - interface: Vxlan1
       protocol_status: up
       state: up
