--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/downlink-ipv4-pool-spine1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/downlink-ipv4-pool-spine1.cfg
@@ -29,6 +29,20 @@ interface Ethernet4
    no switchport
    ip address 10.0.1.2/31
 !
+interface Ethernet5
+   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF3_Ethernet1
+   no shutdown
+   mtu 9214
+   no switchport
+   ip address 10.0.3.4/31
+!
+interface Ethernet6
+   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF4_Ethernet1
+   no shutdown
+   mtu 9214
+   no switchport
+   ip address 10.0.3.6/31
+!
 interface Loopback0
    description EVPN_Overlay_Peering
    no shutdown
@@ -67,12 +81,24 @@ router bgp 65000
    neighbor 10.0.1.3 peer group IPv4-UNDERLAY-PEERS
    neighbor 10.0.1.3 remote-as 65001
    neighbor 10.0.1.3 description downlink-ipv4-pool-l3leaf2_Ethernet1
+   neighbor 10.0.3.5 peer group IPv4-UNDERLAY-PEERS
+   neighbor 10.0.3.5 remote-as 65002
+   neighbor 10.0.3.5 description downlink-ipv4-pool-l3leaf3_Ethernet1
+   neighbor 10.0.3.7 peer group IPv4-UNDERLAY-PEERS
+   neighbor 10.0.3.7 remote-as 65003
+   neighbor 10.0.3.7 description downlink-ipv4-pool-l3leaf4_Ethernet1
    neighbor 192.168.1.1 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.1.1 remote-as 65000
    neighbor 192.168.1.1 description downlink-ipv4-pool-l3leaf1
    neighbor 192.168.1.2 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.1.2 remote-as 65001
    neighbor 192.168.1.2 description downlink-ipv4-pool-l3leaf2
+   neighbor 192.168.1.3 peer group EVPN-OVERLAY-PEERS
+   neighbor 192.168.1.3 remote-as 65002
+   neighbor 192.168.1.3 description downlink-ipv4-pool-l3leaf3
+   neighbor 192.168.1.4 peer group EVPN-OVERLAY-PEERS
+   neighbor 192.168.1.4 remote-as 65003
+   neighbor 192.168.1.4 description downlink-ipv4-pool-l3leaf4
    redistribute connected route-map RM-CONN-2-BGP
    !
    address-family evpn
