--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/DOWNLINK_IPV4_POOL_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/DOWNLINK_IPV4_POOL_TESTS.yml
@@ -15,11 +15,15 @@ spine:
       downlink_pools:
         - downlink_ipv4_pool: 10.0.1.0/24
           downlink_interfaces: [Ethernet3, Ethernet4]
+        - downlink_ipv4_pool: 10.0.3.0/24
+          downlink_interfaces: [Ethernet5, Ethernet6]
       id: 1
     - name: downlink-ipv4-pool-spine2
       downlink_pools:
         - downlink_ipv4_pool: 10.0.2.0/24
           downlink_interfaces: [Ethernet3, Ethernet4]
+        - downlink_ipv4_pool: 10.0.4.0/24
+          downlink_interfaces: [Ethernet5, Ethernet6]
       id: 2
 
 l3leaf:
@@ -36,3 +40,9 @@ l3leaf:
     - name: downlink-ipv4-pool-l3leaf2
       id: 2
       uplink_switch_interfaces: [Ethernet4, Ethernet4]
+    - name: downlink-ipv4-pool-l3leaf3
+      id: 3
+      uplink_switch_interfaces: [Ethernet5, Ethernet5]
+    - name: downlink-ipv4-pool-l3leaf4
+      id: 4
+      uplink_switch_interfaces: [Ethernet6, Ethernet6]
