--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -337,6 +337,8 @@ all:
             downlink-ipv4-pool-spine2:
             downlink-ipv4-pool-l3leaf1:
             downlink-ipv4-pool-l3leaf2:
+            downlink-ipv4-pool-l3leaf3:
+            downlink-ipv4-pool-l3leaf4:
         SINGLE_LINK_TO_MLAG_PAIR:
           hosts:
             SL-LEAF0A:
