--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-leaf1c-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-leaf1c-catalog.yml
@@ -129,6 +129,28 @@ anta.tests.connectivity:
       description: Inband Mgmt Reachability
 - VerifyReachability:
     hosts:
+    - destination: 10.255.2.1
+      repeat: 1
+      source: Vlan4085
+      vrf: MGMT
+    result_overwrite:
+      categories:
+      - Loopback0 Reachability
+      custom_field: 'Source: dc1-leaf1c - Vlan4085 Destination: 10.255.2.1'
+      description: Inband Mgmt Reachability
+- VerifyReachability:
+    hosts:
+    - destination: 10.255.2.2
+      repeat: 1
+      source: Vlan4085
+      vrf: MGMT
+    result_overwrite:
+      categories:
+      - Loopback0 Reachability
+      custom_field: 'Source: dc1-leaf1c - Vlan4085 Destination: 10.255.2.2'
+      description: Inband Mgmt Reachability
+- VerifyReachability:
+    hosts:
     - destination: 10.255.128.11
       repeat: 1
       source: Vlan4085
@@ -297,16 +319,6 @@ anta.tests.interfaces:
       - Interface State
       custom_field: Vlan4085 - L2LEAF_INBAND_MGMT
       description: Vlan Interface & Line Protocol == 'up'
-- VerifyInterfacesStatus:
-    interfaces:
-    - interface: Dps1
-      protocol_status: up
-      state: up
-    result_overwrite:
-      categories:
-      - Interface State
-      custom_field: Dps1 - Test DPS Interface
-      description: DPS Interface Status & Line Protocol == 'up'
 anta.tests.security:
 - VerifyAPIHttpsSSL:
     profile: eAPI_SSL_Profile
