--- a/ansible_collections/arista/avd/molecule/eos_validate_state/inventory/group_vars/FABRIC.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/inventory/group_vars/FABRIC.yml
@@ -53,6 +53,10 @@ bgp_peer_groups:
     password: 7x4B4rnJhZB438m9+BrBfQ==
   mlag_ipv4_underlay_peer:
     password: 4b21pAdCvWeAqpcKDFMdWw==
+  wan_overlay_peers:
+    password: "htm4AZe9mIQOO1uiMuGgYQ=="
+    listen_range_prefixes:
+      - 10.0.0.0/8
 
 # P2P interfaces MTU, includes VLANs 4093 and 4094 that are over peer-link
 # If you're running vEOS-lab or cEOS, you should use MTU of 1500 instead as shown in the following line
