--- a/ansible_collections/arista/avd/molecule/eos_validate_state/inventory/inventory.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/inventory/inventory.yml
@@ -2,6 +2,9 @@
 # inventory.yml
 all:
   children:
+    WAN:
+      children:
+        DC1_WAN:
     FABRIC:
       children:
         DC1:
@@ -29,6 +32,12 @@ all:
                   ansible_host: 172.16.1.151
                 dc1-leaf2c:
                   ansible_host: 172.16.1.152
+            DC1_WAN:
+              hosts:
+                dc1-wan1:
+                  ansible_host: 172.16.1.15
+                dc1-wan2:
+                  ansible_host: 172.16.1.16
         DC2:
           children:
             DC2_SPINES:
